horizontal scrollbar fix on small screens

--- a/css/style.css
+++ b/css/style.css
@@ -695,11 +695,7 @@ footer {
     padding-left: 10px;
   }
 
-  pre code {
-    word-break: break-all;
-  }
-
-  td code {
+  code {
     word-break: break-all;
   }
 
